better  routing
