# src/services/api/docs/swagger.json
@@ -114,22 +114,22 @@
                 }
             }
         },
-        "/v1/versions/is-ready": {
+        "/v1/versions/info/{id}": {
             "get": {
-                "description": "Get status of version",
+                "description": "Get info about version",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
                     "versions"
                 ],
-                "summary": "Get status of version",
+                "summary": "Get info about version",
                 "parameters": [
                     {
                         "type": "string",
                         "description": "Version ID",
-                        "name": "version_id",
-                        "in": "query",
+                        "name": "id",
+                        "in": "path",
                         "required": true
                     }
                 ],
@@ -137,7 +137,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/versions.IsReadyResponse"
+                            "$ref": "#/definitions/versions.VersionInfoResponse"
                         }
                     }
                 }
@@ -233,17 +233,6 @@
                 }
             }
         },
-        "versions.IsReadyResponse": {
-            "type": "object",
-            "properties": {
-                "code": {
-                    "type": "integer"
-                },
-                "is_ready": {
-                    "type": "boolean"
-                }
-            }
-        },
         "versions.TrainVersionResponse": {
             "type": "object",
             "properties": {
@@ -254,6 +243,21 @@
                     "type": "string"
                 },
                 "version_id": {
+                    "type": "string"
+                }
+            }
+        },
+        "versions.VersionInfoResponse": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer"
+                },
+                "info": {},
+                "is_ready": {
+                    "type": "boolean"
+                },
+                "time_training": {
                     "type": "string"
                 }
             }
